# epyc-inference-research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: MODEL_MANIFEST.md
orchestration/: model_registry.yaml
research/: AGENTIC_BENCHMARKING_PLAN.md  CAS_SPEC_IMPLEMENTATION_PLAN.md  CODER_BENCHMARKING_PLAN.md  ESCALATION_FLOW.md  FORMALIZER_INVESTIGATION.md  GENERAL_BENCHMARKING_PLAN.md  Hierarchical _Orchestration_Refinement.md  Hierarchical_Orchestration_Methodology.md  INSTRUCTION_PRECISION_BENCHMARKING_PLAN.md  K_VALUE_OPTIMIZATION.md  LONG_CONTEXT_BENCHMARKING_PLAN.md  MATHSMITH_CANONICALIZER_PROPOSAL.md  MATH_BENCHMARKING_PLAN.md  NEXT_ORCHESTRATION_TASKS.md  Orchestrator_Implementation_Plan.md  PERFORMANCE_PROJECTIONS.md  README.md  RESEARCH_PROGRESS.md  RESULTS_SUMMARY.md  SPECULATIVE_DECODING_REPORT.md  THINKING_BENCHMARKING_PLAN.md  TOON_EVALUATION.md  VL_BENCHMARKING_PLAN.md  amd_pace_testing.md  colbert_zero_review.md  cpu_optimization_findings.md  dynamic_speculative_depth.md  early_failure_prediction.md  kimi_k25_agent_swarm_analysis.md  memrl_implementation.md  mtp_investigation.md  neurips_2025_spec_decoding_tracks.md  research_report_template.md  rlm_analysis.md  speculative_decoding_research.BAK  speculative_decoding_research.md  speculative_decoding_results.md  strategic_action_plan.md  track2_revised_approach_strategy.docx  track_reorganization_analysis.md
scripts/: migrate_to_faiss.py  q_scorer_runner.py  score_benchmarks.py  seed_graphs.py  seed_memory_from_logs.py  seed_remaining_phase_b.py  test_recursive_orchestration.py  (+1 more)
(+4796 files in other folders)
