[project]
name = "epyc-inference-research"
version = "0.1.0"
description = "AMD EPYC inference optimization research, benchmarks, and model evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=2.16.0",
]
tuning = [
    "optuna>=3.5.0",
    "optuna-dashboard>=0.14.0",
]
knowledge = [
    "arxiv>=2.1.0",
    "mwclient>=0.10.1",
    "semanticscholar>=0.8.0",
    "google-api-python-client>=2.100.0",
]
retrieval = [
    "next-plaid-client>=0.1.0",
]
graph = [
    "kuzu>=0.3.0",
    "cachetools>=5.3.0",
]
all = [
    "epyc-inference-research[benchmark,tuning,knowledge,graph]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
